# eco-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: pollution.py  weather.py
app/db/: init_db.py  session.py
app/models/: pollution.py  weather.py
app/scripts/: set_menu.py
app/services/: nebo_service.py  scheduler.py  weather_service.py
webapp/: package.json  tsconfig.app.json  vite.config.ts
webapp/src/: App.tsx  main.tsx
webapp/src/api/: air.ts  client.ts  weather.ts
webapp/src/components/: App.tsx  ControlPanel.tsx  DataBadge.tsx  DetailedInfo.tsx  InfoCard.tsx  Map2gis.tsx  MapView.tsx
webapp/src/hooks/: useTelegram.ts
webapp/src/pages/: Home.tsx
webapp/src/types/: telegram-webapp.d.ts
