[project]
name = "eco-monitoring"
version = "0.1.0"
description = "Telegram Web App по экологии Москвы"
authors = ["Egor <your@email.com>"]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "python-dotenv",
    "aiohttp",
    "pydantic",
    "httpx",
    "APScheduler",
]

[tool.uv]
virtualenvs.in-project = true

[tool.uv.scripts]
init-db = "python app/db/init_db.py"
